src/test/ui/consts/const-int-wrapping.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/const-int-wrapping.rs:2:28
   |
LL |     let x: &'static i32 = &(5_i32.wrapping_add(3));
   |            ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/const-int-wrapping.rs:2:12
   |
LL |     let x: &'static i32 = &(5_i32.wrapping_add(3));
   |            ^^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/const-int-wrapping.rs:4:28
   |
LL |     let y: &'static i32 = &(5_i32.wrapping_sub(3));
   |            ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/const-int-wrapping.rs:4:12
   |
LL |     let y: &'static i32 = &(5_i32.wrapping_sub(3));
   |            ^^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/const-int-wrapping.rs:6:28
   |
LL |     let z: &'static i32 = &(5_i32.wrapping_mul(3));
   |            ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/const-int-wrapping.rs:6:12
   |
LL |     let z: &'static i32 = &(5_i32.wrapping_mul(3));
   |            ^^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/const-int-wrapping.rs:8:28
   |
LL |     let a: &'static i32 = &(5_i32.wrapping_shl(3));
   |            ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
...
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/const-int-wrapping.rs:8:12
   |
LL |     let a: &'static i32 = &(5_i32.wrapping_shl(3));
   |            ^^^^^^^^^^^^

error[E0716]: temporary value dropped while borrowed
  --> $DIR/const-int-wrapping.rs:10:28
   |
LL |     let b: &'static i32 = &(5_i32.wrapping_shr(3));
   |            ------------    ^^^^^^^^^^^^^^^^^^^^^^^ creates a temporary which is freed while still in use
   |            |
   |            type annotation requires that borrow lasts for `'static`
LL |
LL | }
   | - temporary value is freed at the end of this statement
   |
help: you can remove unnecessary lifetime annotations here
  --> $DIR/const-int-wrapping.rs:10:12
   |
LL |     let b: &'static i32 = &(5_i32.wrapping_shr(3));
   |            ^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0716`.
